CHANGELOG RoundCube Webmail
---------------------------

2008/09/02 (thomasb)
----------
- Add feature to import contacts from vcard files (#1326103)
- Mark form buttons that provide the most obvious operation (mainaction)

2008/08/30 (alec)
----------
- Improved HTML to TXT conversion by html2text class update
  to version 1.0.0

2008/08/28 (alec)
----------
- Added option 'quota_zero_as_unlimited' (#1484604)
- Added PRE handling in html2text class (#1484740)

2008/08/28 (robin)
----------
- Added folder hierarchy collapsing

2008/08/27 (alec)
----------
- Added options to use syslog instead of log file (#1484850)
- Added Logging & Debugging section in Installer
- Write to smtp log also sent MDN confirmations

2008/08/26 (alec)
----------
- Removed support for PEAR::DB driver

2008/08/21 (alec)
----------
- Add Content-Length header while attachments downloading (#1484256)
- Fix In-Reply-To and References headers when composing saved draft 
  message (#1485288)
- Removed PHP4 class constructors
- Fix html message charset conversion for charsets with underline (#1485287) 
- Fix buttons status after contacts deletion (#1485233)

2008/08/21 (estadtherr)
----------
- Fix escaping of To: and From: fields when building message body for reply
  or forward in the HTML editor (#1484904)

2008/08/15 (thomasb)
----------
- Use current mailbox name in template (#1485256)
- Better fix for skipping untagged responses (#1485261)
- Added pspell support patch by Kris Steinhoff (#1483960)
- Enable spellchecker for HTML editor (#1485114)
- Respect spellcheck_uri in tinyMCE spellchecker (#1484196)

2008/08/09 (alec)
----------
- Case insensitive contacts searching using PostgreSQL (#1485259)

2008/07/31 (thomasb)
----------
- Make default imap folders configurable for each user (#1485075)
- Save outgoing mail to selectable folder (#1324581)
- Fix hiding of mark menu when clicking th button again (#1484944)

2008/07/21 (alec)
----------
- use long date format in print mode (#1485191)
